haskell-regex-posix (0.93.2-2) UNRELEASED; urgency=low

  * debian/control: Use Debian Haskell Group as Maintainer.

 -- Marco Túlio Gontijo e Silva <marcot@riseup.net>  Fri, 17 Jul 2009 12:20:13 -0300

haskell-regex-posix (0.93.2-1) experimental; urgency=low

  * New upstream release
  * debian/control:
    - Bump Standards-Version. No changes needed.

 -- Arjan Oosting <arjan@debian.org>  Mon, 13 Oct 2008 07:45:21 +0200

haskell-regex-posix (0.93.1-1) unstable; urgency=low

  * Take over package from Ian, as I already maintain haskell-regex-base,
    and move Ian to the Uploaders field.
  * Packaging complete redone (based on my haskell-regex-base package).
  * This version of libghc6-regex-posix-dev installs and deinstalls
    properly. (Closes: #460599)

 -- Arjan Oosting <arjan@debian.org>  Mon, 14 Jan 2008 00:48:26 +0100

haskell-regex-posix (0.72.0.2-1) unstable; urgency=low
  
  * Initial release (used to be part of ghc6).
  * Using "Generic Haskell cabal library packaging files v9".
  
 -- Ian Lynagh (wibble) <igloo@debian.org>  Wed, 21 Nov 2007 01:31:28 +0000
  