@@ -1,78 +1,6 @@
 #!/usr/bin/make -f
-# -*- makefile -*-
-#
-# Based on dh-make template containing work of Joey Hess, Craig Small
-# and Bill Allombert. 
-#
 
-# Include dpatch
-include /usr/share/dpatch/dpatch.make
+DEB_BUILD_DEPENDENCIES = build-arch
 
-# Uncomment this to turn on verbose mode.
-#export DH_VERBOSE=1
-
-# This has to be exported to make some magic below work.
-export DH_OPTIONS
-
-
-setup: patch-stamp
-	dh_testdir
-	ghc --make Setup -o setup -package Cabal 
-
-build: build-stamp
-build-stamp: setup
-	touch $@
-
-clean: clean-patched unpatch
-clean-patched:
-	dh_testdir
-	dh_testroot
-	rm -f build-stamp
-	if [ -x setup ] && [ -e .setup-config ]; then ./setup clean ; fi
-	rm -rf setup Setup.hi Setup.ho Setup.o .*config* dist html
-	dh_clean 
-
-install: install-arch install-indep
-install-arch: build-stamp
-	dh_testdir 
-	dh_testroot
-	dh_clean -k -s
-	dh_installdirs -s
-	dh_haskell -s
-	dh_install -s
-
-install-indep: build-stamp
-	dh_testdir 
-	dh_testroot
-	dh_clean -k -i
-	dh_installdirs -i
-	dh_haskell -i
-	dh_install -i
-
-# Must not depend on anything. This is to be called by
-# binary-arch/binary-indep
-# in another 'make' thread.
-binary-common:
-	dh_testdir
-	dh_testroot
-	dh_installchangelogs 
-	dh_installdocs
-	dh_compress -X.haddock 
-	dh_fixperms
-	dh_installdeb
-	dh_shlibdeps
-	dh_haskell_depends
-	dh_gencontrol
-	dh_md5sums
-	dh_builddeb
-
-# Build architecture independant packages using the common target.
-binary-indep: install-indep
-	$(MAKE) -f debian/rules DH_OPTIONS=-i binary-common
-
-# Build architecture dependant packages using the common target.
-binary-arch: install-arch
-	$(MAKE) -f debian/rules DH_OPTIONS=-s binary-common
-
-binary: binary-arch binary-indep
-.PHONY: binary binary-arch binary-indep build clean clean-patched install install-arch install-indep 
+include /usr/share/cdbs/1/rules/debhelper.mk
+include /usr/share/cdbs/1/class/hlibrary.mk
