@@ -1,6 +1,10 @@
 haskell-regex-posix (0.93.2-2) UNRELEASED; urgency=low
 
+  [ Marco Túlio Gontijo e Silva ]
   * debian/control: Use Debian Haskell Group as Maintainer.
+
+  [ Joachim Breitner ]
+  * Use hlibrary.mk (Closes: #556834) 
 
  -- Marco Túlio Gontijo e Silva <marcot@riseup.net>  Fri, 17 Jul 2009 12:20:13 -0300
 
